--- a/public/index.html
+++ b/public/index.html
@@ -42,5 +42,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+        <a target="_blank" href="https://icons8.com/icon/mPTRPG3Fz881/shopping-bag">shopping bag</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
   </body>
 </html>
